# z80-trace

./: CMakeLists.txt  PARITY.md  README.md
include/: types.h  z80_cpu.h  z80_io_plugin.h
src/: io_plugin.cpp  io_plugin.h  main.cpp  z80_disasm.c  z80_exec.c  z80_state.c
test/: run_tests.py
